--- a/day07/style.css
+++ b/day07/style.css
@@ -47,3 +47,25 @@
 .item-four {
   grid-area: footer;
 }
+
+/* Media Queries demo */
+.media-demo {
+  margin-top: 25px;
+  display: flex;
+  flex-direction: column;
+}
+
+.para {
+  padding: 10px 20px;
+  background-color: gold;
+}
+
+.para:nth-of-type(2) {
+  background-color: dodgerblue;
+}
+
+@media screen and (min-width: 600px) {
+  .media-demo {
+    flex-direction: row;
+  }
+}
