added a start game button and displaying message cards and sum on the HTML

--- a/month_03/blackjack/style.css
+++ b/month_03/blackjack/style.css
@@ -25,3 +25,16 @@ h1 {
 #message-el {
     font-style: italic;
 }
+
+button {
+    margin-top: 2rem;
+    padding: 1rem 2rem;
+    outline: none;
+    border: 0;
+    border-radius: 5px;
+    color: #016f32;
+    font-size: inherit;
+    font-weight: bold;
+    cursor: pointer;
+    background-color: goldenrod;
+}
